# tmdb-client-rs

./: Cargo.toml  README.md  tmdb_oas.json
adr/: 20190620_init.adoc  20190624_oas_update.adoc
docs/: AccessTokenBody.md  AccountApi.md  AccountDetails.md  AccountStates.md  AccountdetailsAvatar.md  AccountdetailsAvatarGravatar.md  AlternativeNamesList.md  AlternativeTitlesList.md  AlternativenameslistResults.md  AlternativetitleslistItem.md  AlternativetitleslistTitles.md  AuthenticationApi.md  Cast.md  CastDetails.md  Certification.md  Certifications.md  CertificationsApi.md  CertificationsCertifications.md  ChangeDetails.md  ChangedetailsChanges.md  ChangedetailsItems.md  ChangesApi.md  ChangesObject.md  ChangesPaginated.md  ChangespaginatedAllOf.md  CollectionObject.md  CollectionPaginated.md  CollectionPart.md  CollectionsApi.md  CompaniesApi.md  Company.md  CompanyDetails.md  CompanyObject.md  CompanyPaginated.md  Configuration.md  ConfigurationApi.md  ConfigurationImages.md  Creator.md  Credit.md  CreditMedia.md  (+324 more)
src/: lib.rs  main.rs
src/apis/: account_api.rs  authentication_api.rs  certifications_api.rs  changes_api.rs  client.rs  collections_api.rs  companies_api.rs  configuration.rs  configuration_api.rs  credits_api.rs  default_api.rs  discover_api.rs  find_api.rs  genres_api.rs  mod.rs  (+15 more)
tests/: alternative_titles_api_tests.rs  collections_api_tests.rs  companies_api_tests.rs  configuration_api_tests.rs  external_id_tests.rs  movie_api_tests.rs  networks_api_tests.rs  people_api_tests.rs  search_api_tests.rs  trending_api_tests.rs  tv_episodes_api_tests.rs
(+341 files in other folders)
