[package]
name = "tmdb_client"
version = "0.1.0"
authors = ["Benoît Courtine <benoit.courtine@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bcourtine/tmdb-client-rs"
documentation = "https://docs.rs/crate/tmdb-client"
homepage = "https://crates.io/crates/tmdb-client"
description = """
Rust client for The Movie Database (TMDB) API.
"""
keywords = ["tmdb", "api", "client"]
categories = ["api-bindings"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
reqwest = "~0.9"

[dev-dependencies]
