[package]
name = "tmdb_client"
version = "1.5.3"
authors = ["Benoît Courtine <benoit.courtine@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bcourtine/tmdb-client-rs"
documentation = "https://docs.rs/crate/tmdb_client"
homepage = "https://crates.io/crates/tmdb_client"
description = """
Rust client for The Movie Database (TMDB) API.
"""
keywords = ["tmdb", "api", "client"]
categories = ["api-bindings"]
edition = "2018"

[dependencies]
chrono = "^0.4"
flate2 = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
reqwest = "~0.9"

[dev-dependencies]
